Fix header spacing

--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -5,7 +5,7 @@
 
 .header { 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
     align-items: center;
     padding: 10px; 
@@ -18,17 +18,17 @@
         font-family: Baruta;
         font-size: 25px;
         font-weight: bold; 
-        padding-left: 480px; 
-        padding-right: 480px;
+        margin-left: 25vw; 
+        margin-right: 25vw;
+
     }
     a {
+        padding-left: 10px;
+        padding-right: 10px;
         font-size: 14px;
         color: black;
     }
 
-    // header:first-child {
-    //     margin-left: 10px;
-    // }
     a:hover {
         cursor: pointer;
         color: #028858;
@@ -39,14 +39,20 @@
     display: flex; 
     justify-content: flex-end;
     align-items: center; 
-    margin-right: 10px;
-    font-size: 14px; 
-    
+    font-size: 14px;
 }
 
 header img {
-    border-radius: 20px;
+    border-radius: 30px;
     position: absolute;
+}
+
+.icon {
+    display: flex; 
+    justify-content: flex-end;
+    align-items: center; 
+    margin-left: 20px;
+    font-size: 12px; 
 }
 
 .logged-in-menu {
@@ -58,75 +64,86 @@ header img {
     font-size: 14px; 
 }
 
-.logged-in-menu img:hover {
-    cursor: pointer;
-}
-
 .logged-in-menu a:hover {
     cursor: pointer;
     color: #028858;
     text-decoration: underline;
 }
 
-.logged-in-menu img:hover {
-
-}
-.dropdown-nav {
-    position: absolute;
-    top: 79px; 
-    display: grid; 
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 85% 15%;
-    height: 340px; 
-    width: 480px;  
-    padding: 45px; 
-    border: 1px solid black; 
+.logged-in-menu {
+    .dropdown-nav {
+        display: none; 
+    }
 }
 
-.dropdown-nav li {
-    list-style-type: none;
-    padding-top: 4px;
-    padding-bottom: 4px;
-}
-
-.dropdown-nav .account-list {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    border-bottom: 1px solid lightgray;
-
-}
-
-.dropdown-nav .created-projects {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    border-bottom: 1px solid lightgray;
-}
-
-.dropdown-nav .logout-footer {
-    grid-row-start: 2;
-}
-
-.logout-footer {
-    display: grid; 
-    align-items: flex-end;
-}
-
-.dropdown-nav h3 {
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 13px;
-    padding-bottom: 35px;
-}
-
-.account-nav {
-    padding-top: 40px;
-    padding-bottom: 35px;
-}
-
-.dropdown-nav li:hover {
+.logged-in-menu:hover {
     cursor: pointer;
-    color: #028858;
-    text-decoration: underline;
+    // .dropdown {
+    //     display: block;
+    // }
+    .dropdown-nav {
+        position: absolute;
+        top: 52px; 
+        background: white;
+        display: grid; 
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 85% 15%;
+        height: 340px; 
+        width: 480px;  
+        padding: 45px; 
+        border: 1px solid black; 
+    }
+    
+    .dropdown-nav li {
+        list-style-type: none;
+        padding-top: 4px;
+        padding-bottom: 4px;
+    }
+    
+    .dropdown-nav .account-list {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        border-bottom: 1px solid lightgray;
+    
+    }
+    
+    .dropdown-nav .created-projects {
+        grid-column-start: 2;
+        grid-column-end: 2;
+        border-bottom: 1px solid lightgray;
+    }
+    
+    .dropdown-nav .logout-footer {
+        grid-row-start: 2;
+    }
+    
+    .logout-footer {
+        display: grid; 
+        align-items: flex-end;
+    }
+    
+    .dropdown-nav h3 {
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 13px;
+        padding-bottom: 35px;
+    }
+    
+    .account-nav {
+        padding-top: 40px;
+        padding-bottom: 35px;
+    }
+    
+    .dropdown-nav li:hover {
+        cursor: pointer;
+        color: #028858;
+        text-decoration: underline;
+    }
 }
+
+// .dropdown {
+    // display: none; 
+
+// }
 
 
